Update translation - 104971815 (#3844) dd2d4c9f24bc70e4b789a59f28a2854f854cf504

--- a/ar/discrimination/index.html
+++ b/ar/discrimination/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مكافحة التمييز</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:18 ص الساعة 5 يناير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;6:18 م الساعة 22 مارس 2021</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<h2>الوصمة الاجتماعية</h2>
+<h2 id="stigma">الوصمة الاجتماعية</h2>
 
 
 
@@ -209,7 +209,7 @@
 
 
 
-<h2>التنمر عبر الإنترنت</h2>
+<h2 id="cyberbullying">التنمر عبر الإنترنت</h2>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<h2>جرائم الكراهية</h2>
+<h2 id="hate-crimes">جرائم الكراهية</h2>
 
 
 
@@ -233,7 +233,7 @@
 
 
 
-<h2>ابقَ على اطلاع</h2>
+<h2 id="stay-informed">ابقَ على اطلاع</h2>
 
 
 
