--- a/es/discrimination/index.html
+++ b/es/discrimination/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Combate de la discriminación</h1>
           
-            <p class="small-text">Última actualización&nbsp;5 de enero de 2021 a las 11:18 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;22 de marzo de 2021 a las 6:18 p. m.</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<h2>Estigmas</h2>
+<h2 id="stigma">Estigmas</h2>
 
 
 
@@ -209,7 +209,7 @@
 
 
 
-<h2>Intimidación cibernética</h2>
+<h2 id="cyberbullying">Intimidación cibernética</h2>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<h2>Crímenes de odio</h2>
+<h2 id="hate-crimes">Crímenes de odio</h2>
 
 
 
@@ -233,7 +233,7 @@
 
 
 
-<h2>Manténgase informado</h2>
+<h2 id="stay-informed">Manténgase informado</h2>
 
 
 
