--- a/ko/discrimination/index.html
+++ b/ko/discrimination/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>차별에 대처하기</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 1월 5일 오전 11:18</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 22일 오후 6:18</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<h2>사회적 낙인</h2>
+<h2 id="stigma">사회적 낙인</h2>
 
 
 
@@ -209,7 +209,7 @@
 
 
 
-<h2>사이버 괴롭힘</h2>
+<h2 id="cyberbullying">사이버 괴롭힘</h2>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<h2>증오 범죄</h2>
+<h2 id="hate-crimes">증오 범죄</h2>
 
 
 
@@ -233,7 +233,7 @@
 
 
 
-<h2>관련 정보를 계속 확인하십시오</h2>
+<h2 id="stay-informed">관련 정보를 계속 확인하십시오</h2>
 
 
 
