--- a/tl/discrimination/index.html
+++ b/tl/discrimination/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Paglaban sa diskriminasyon</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Enero 5, 2021 sa 11:18 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 22, 2021 sa 6:18 PM</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<h2>Stigma</h2>
+<h2 id="stigma">Stigma</h2>
 
 
 
@@ -209,7 +209,7 @@
 
 
 
-<h2>Cyberbullying</h2>
+<h2 id="cyberbullying">Cyberbullying</h2>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<h2>Mga mapoot na krimen</h2>
+<h2 id="hate-crimes">Mga mapoot na krimen</h2>
 
 
 
@@ -233,7 +233,7 @@
 
 
 
-<h2>Manatiling updated</h2>
+<h2 id="stay-informed">Manatiling updated</h2>
 
 
 
