--- a/vi/discrimination/index.html
+++ b/vi/discrimination/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Chống phân biệt đối xử</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;5 tháng 1, 2021 lúc 11:18</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 18:18</p>
           
         </div>
       </div>
@@ -187,7 +187,7 @@
 
 
 
-<h2>Kỳ thị</h2>
+<h2 id="stigma">Kỳ thị</h2>
 
 
 
@@ -211,7 +211,7 @@
 
 
 
-<h2>Bắt nạt trên mạng</h2>
+<h2 id="cyberbullying">Bắt nạt trên mạng</h2>
 
 
 
@@ -223,7 +223,7 @@
 
 
 
-<h2>Tội ác do thù ghét</h2>
+<h2 id="hate-crimes">Tội ác do thù ghét</h2>
 
 
 
@@ -235,7 +235,7 @@
 
 
 
-<h2>Duy trì cập nhật thông tin</h2>
+<h2 id="stay-informed">Duy trì cập nhật thông tin</h2>
 
 
 
