--- a/zh-hant/discrimination/index.html
+++ b/zh-hant/discrimination/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>對抗歧視</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年1月5日, 上午11:18</p>
+            <p class="small-text">最近更新&nbsp;2021年3月22日, 下午6:18</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<h2>污名化</h2>
+<h2 id="stigma">污名化</h2>
 
 
 
@@ -209,7 +209,7 @@
 
 
 
-<h2>網路霸凌</h2>
+<h2 id="cyberbullying">網路霸凌</h2>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<h2>仇恨犯罪</h2>
+<h2 id="hate-crimes">仇恨犯罪</h2>
 
 
 
@@ -233,7 +233,7 @@
 
 
 
-<h2>了解最新資訊</h2>
+<h2 id="stay-informed">了解最新資訊</h2>
 
 
 
