Update translation - 104919671 (#3848) b6edfe246c8ec1f25d9eee433d3aa2f6a59a1177

--- a/ar/stay-home-except-for-essential-needs/index.html
+++ b/ar/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>حول قيود كوفيد-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:25 م الساعة 15 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;5:46 م الساعة 22 مارس 2021</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
 
 
 
-<h3 class="h2 mt-4" id="rshoqas">الأمر الإقليمي بالبقاء في المنزل</h3>
+<h3 id="rshoqas">الأمر الإقليمي بالبقاء في المنزل</h3>
 
 
 
@@ -366,7 +366,7 @@
 
 
 
-<h3 class="h2 mt-4">أمر اكتظاظ المستشفيات</h3>
+<h3 id="hsoqas">أمر اكتظاظ المستشفيات</h3>
 
 
 
@@ -416,7 +416,7 @@
 
 
 
-<h3 class="h2 mt-4" id="sho-qas">أمر البقاء في المنزل</h3>
+<h3 id="sho-qas">أمر البقاء في المنزل</h3>
 
 
 
@@ -504,7 +504,7 @@
 
 
 
-<h3 class="h2 mt-4" id="blueprint-qas">البرنامج التخطيطي لاقتصاد أكثر أمانًا</h3>
+<h3 id="blueprint-qas">البرنامج التخطيطي لاقتصاد أكثر أمانًا</h3>
 
 
 
@@ -643,7 +643,7 @@
 
 
 
-<h3 class="h2 mt-4" id="general-qas">أسئلة عامة</h3>
+<h3 id="general-qas">أسئلة عامة</h3>
 
 
 
@@ -767,7 +767,7 @@
 
 
 
-<h3 class="h2 mt-4" id="political">الأنشطة المحمية</h3>
+<h3 id="political">الأنشطة المحمية</h3>
 
 
 
@@ -1136,7 +1136,7 @@
 
 
 
-<h3 class="h2 mt-4" id="govservices">الخدمات الحكومية</h3>
+<h3 id="govservices">الخدمات الحكومية</h3>
 
 
 
