--- a/es/stay-home-except-for-essential-needs/index.html
+++ b/es/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Acerca de las restricciones por la COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;15 de marzo de 2021 a las 12:25 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;22 de marzo de 2021 a las 5:46 p. m.</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
 
 
 
-<h3 class="h2 mt-4" id="rshoqas">Orden regional de permanecer en casa</h3>
+<h3 id="rshoqas">Orden regional de permanecer en casa</h3>
 
 
 
@@ -366,7 +366,7 @@
 
 
 
-<h3 class="h2 mt-4">Orden por aumento repentino en la demanda hospitalaria</h3>
+<h3 id="hsoqas">Orden por aumento repentino en la demanda hospitalaria</h3>
 
 
 
@@ -416,7 +416,7 @@
 
 
 
-<h3 class="h2 mt-4" id="sho-qas">Orden de permanecer en casa</h3>
+<h3 id="sho-qas">Orden de permanecer en casa</h3>
 
 
 
@@ -504,7 +504,7 @@
 
 
 
-<h3 class="h2 mt-4" id="blueprint-qas">Plan para una economía más segura</h3>
+<h3 id="blueprint-qas">Plan para una economía más segura</h3>
 
 
 
@@ -643,7 +643,7 @@
 
 
 
-<h3 class="h2 mt-4" id="general-qas">General</h3>
+<h3 id="general-qas">General</h3>
 
 
 
@@ -767,7 +767,7 @@
 
 
 
-<h3 class="h2 mt-4" id="political">Actividades protegidas</h3>
+<h3 id="political">Actividades protegidas</h3>
 
 
 
@@ -1136,7 +1136,7 @@
 
 
 
-<h3 class="h2 mt-4" id="govservices">Servicios gubernamentales</h3>
+<h3 id="govservices">Servicios gubernamentales</h3>
 
 
 
