--- a/ko/stay-home-except-for-essential-needs/index.html
+++ b/ko/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 제한 조치 관련 사항</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 15일 오후 12:25</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 22일 오후 5:46</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
 
 
 
-<h3 class="h2 mt-4" id="rshoqas">지역별 자택 체류 명령:</h3>
+<h3 id="rshoqas">지역별 자택 체류 명령:</h3>
 
 
 
@@ -366,7 +366,7 @@
 
 
 
-<h3 class="h2 mt-4">병원 수요 급증에 따른 명령</h3>
+<h3 id="hsoqas">병원 수요 급증에 따른 명령</h3>
 
 
 
@@ -416,7 +416,7 @@
 
 
 
-<h3 class="h2 mt-4" id="sho-qas">자택 체류 명령</h3>
+<h3 id="sho-qas">자택 체류 명령</h3>
 
 
 
@@ -504,7 +504,7 @@
 
 
 
-<h3 class="h2 mt-4" id="blueprint-qas">더욱 안전한 경제를 위한 청사진</h3>
+<h3 id="blueprint-qas">더욱 안전한 경제를 위한 청사진</h3>
 
 
 
@@ -643,7 +643,7 @@
 
 
 
-<h3 class="h2 mt-4" id="general-qas">일반 사항</h3>
+<h3 id="general-qas">일반 사항</h3>
 
 
 
@@ -767,7 +767,7 @@
 
 
 
-<h3 class="h2 mt-4" id="political">보호 대상 활동</h3>
+<h3 id="political">보호 대상 활동</h3>
 
 
 
@@ -1136,7 +1136,7 @@
 
 
 
-<h3 class="h2 mt-4" id="govservices">정부 서비스</h3>
+<h3 id="govservices">정부 서비스</h3>
 
 
 
