--- a/tl/stay-home-except-for-essential-needs/index.html
+++ b/tl/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tungkol sa mga paghihigpit para sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 15, 2021 sa 12:25 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 22, 2021 sa 5:46 PM</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
 
 
 
-<h3 class="h2 mt-4" id="rshoqas">Panrehiyong Utos na Manatili sa Bahay</h3>
+<h3 id="rshoqas">Panrehiyong Utos na Manatili sa Bahay</h3>
 
 
 
@@ -366,7 +366,7 @@
 
 
 
-<h3 class="h2 mt-4">Kautusan Kaugnay ng Pagdami ng Mga Kaso sa Ospital</h3>
+<h3 id="hsoqas">Kautusan Kaugnay ng Pagdami ng Mga Kaso sa Ospital</h3>
 
 
 
@@ -416,7 +416,7 @@
 
 
 
-<h3 class="h2 mt-4" id="sho-qas">Kautusang Manatili sa Bahay</h3>
+<h3 id="sho-qas">Kautusang Manatili sa Bahay</h3>
 
 
 
@@ -504,7 +504,7 @@
 
 
 
-<h3 class="h2 mt-4" id="blueprint-qas">Blueprint para sa Mas Ligtas na Ekonomiya</h3>
+<h3 id="blueprint-qas">Blueprint para sa Mas Ligtas na Ekonomiya</h3>
 
 
 
@@ -643,7 +643,7 @@
 
 
 
-<h3 class="h2 mt-4" id="general-qas">Pangkalahatan</h3>
+<h3 id="general-qas">Pangkalahatan</h3>
 
 
 
@@ -767,7 +767,7 @@
 
 
 
-<h3 class="h2 mt-4" id="political">Mga pinoprotektahang aktibidad</h3>
+<h3 id="political">Mga pinoprotektahang aktibidad</h3>
 
 
 
@@ -1136,7 +1136,7 @@
 
 
 
-<h3 class="h2 mt-4" id="govservices">Mga serbisyo ng pamahalaan</h3>
+<h3 id="govservices">Mga serbisyo ng pamahalaan</h3>
 
 
 
