--- a/vi/stay-home-except-for-essential-needs/index.html
+++ b/vi/stay-home-except-for-essential-needs/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Về những hạn chế trong đại dịch COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;15 tháng 3, 2021 lúc 24:25</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 17:46</p>
           
         </div>
       </div>
@@ -239,7 +239,7 @@
 
 
 
-<h3 class="h2 mt-4" id="rshoqas">Lệnh Ở Nhà Trong Khu Vực</h3>
+<h3 id="rshoqas">Lệnh Ở Nhà Trong Khu Vực</h3>
 
 
 
@@ -368,7 +368,7 @@
 
 
 
-<h3 class="h2 mt-4">Lệnh Áp Dụng Khi Số Ca Ở Bệnh Viện Tăng Mạnh</h3>
+<h3 id="hsoqas">Lệnh Áp Dụng Khi Số Ca Ở Bệnh Viện Tăng Mạnh</h3>
 
 
 
@@ -418,7 +418,7 @@
 
 
 
-<h3 class="h2 mt-4" id="sho-qas">Lệnh Ở Nhà</h3>
+<h3 id="sho-qas">Lệnh Ở Nhà</h3>
 
 
 
@@ -506,7 +506,7 @@
 
 
 
-<h3 class="h2 mt-4" id="blueprint-qas">Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h3>
+<h3 id="blueprint-qas">Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h3>
 
 
 
@@ -645,7 +645,7 @@
 
 
 
-<h3 class="h2 mt-4" id="general-qas">Tổng quan</h3>
+<h3 id="general-qas">Tổng quan</h3>
 
 
 
@@ -769,7 +769,7 @@
 
 
 
-<h3 class="h2 mt-4" id="political">Các hoạt động được bảo vệ</h3>
+<h3 id="political">Các hoạt động được bảo vệ</h3>
 
 
 
@@ -1138,7 +1138,7 @@
 
 
 
-<h3 class="h2 mt-4" id="govservices">Các dịch vụ từ chính phủ</h3>
+<h3 id="govservices">Các dịch vụ từ chính phủ</h3>
 
 
 
