--- a/zh-hans/stay-home-except-for-essential-needs/index.html
+++ b/zh-hans/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>关于COVID-19限制</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月15日, 下午12:25</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月22日, 下午5:46</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
 
 
 
-<h3 class="h2 mt-4" id="rshoqas">地区性居家避疫令</h3>
+<h3 id="rshoqas">地区性居家避疫令</h3>
 
 
 
@@ -366,7 +366,7 @@
 
 
 
-<h3 class="h2 mt-4">医院患者激增指令</h3>
+<h3 id="hsoqas">医院患者激增指令</h3>
 
 
 
@@ -416,7 +416,7 @@
 
 
 
-<h3 class="h2 mt-4" id="sho-qas">居家避疫令</h3>
+<h3 id="sho-qas">居家避疫令</h3>
 
 
 
@@ -504,7 +504,7 @@
 
 
 
-<h3 class="h2 mt-4" id="blueprint-qas">更安全的经济蓝图</h3>
+<h3 id="blueprint-qas">更安全的经济蓝图</h3>
 
 
 
@@ -643,7 +643,7 @@
 
 
 
-<h3 class="h2 mt-4" id="general-qas">一般信息</h3>
+<h3 id="general-qas">一般信息</h3>
 
 
 
@@ -767,7 +767,7 @@
 
 
 
-<h3 class="h2 mt-4" id="political">受保护的活动</h3>
+<h3 id="political">受保护的活动</h3>
 
 
 
@@ -1136,7 +1136,7 @@
 
 
 
-<h3 class="h2 mt-4" id="govservices">政府服务</h3>
+<h3 id="govservices">政府服务</h3>
 
 
 
