Update page - industry-guidance.html 6ea1ff82c99c74dbb221f904360c4e60ab0bd9fa

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;March 16, 2021 at 2:26 PM</p>
+            <p class="small-text">Last updated&nbsp;March 23, 2021 at 4:52 PM</p>
           
         </div>
       </div>
@@ -2245,13 +2245,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Schools &#8211; updated February 22, 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Schools &#8211; updated March 20, 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>California has updated the guidance and framework for reopening K-12 schools for in-person learning for the 2020-2021 school year. Learn more in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12 schools reopening framework and guidance</a>. Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">questions and answers</a> about the K-12 schools reopening framework and guidance.</p>
-<p> Schools must also follow the <a href="https://covid19.ca.gov/industry-guidance/#cohort-guidance">guidance related to cohorts</a> of children and youth. For school-sponsored youth sports, follow the <a title="guidance for youth sports" href="https://covid19.ca.gov/industry-guidance/#youthsports-guidance">guidance for youth sports</a>.</p>
+            <p>California has updated the guidance and framework for reopening K-12 schools for in-person learning for the 2020-2021 school year. Learn more in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">K-12 schools reopening framework and guidance</a>. Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">questions and answers</a> about the K-12 schools reopening framework and guidance.</p>
+<p>For school-sponsored youth sports, follow the <a title="guidance for youth sports" href="https://covid19.ca.gov/industry-guidance/#youthsports-guidance">guidance for youth sports</a>.</p>
 <p>Visit <a href="https://schools.covid19.ca.gov/">Safe Schools for All</a> for the latest information and resources about COVID-19 and schools.</p>
 
                   </div>
@@ -2379,14 +2379,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Follow this <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guidance for youth and adult recreational sports,</a> both indoor and outdoor.&nbsp;This guidance goes into effect on February 26, 2021. It shows which sports are allowed to return to play in which tiers, based on level of contact and risk of COVID-19 transmission.</p>
+            <p>Follow this <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guidance for youth and adult recreational sports,</a> both indoor and outdoor.&nbsp;It shows which sports are allowed to return to play in which tiers, based on level of contact and risk of COVID-19 transmission. It also includes limitations for competitions and tournaments.</p>
 <p>This guidance applies to all organized youth sports, including:</p>
 <ul><li>K-12 school programs</li><li>Community-sponsored recreational programs</li><li>Private clubs and leagues</li></ul>
 <p>This guidance also applies to adults playing recreational sports. It does not apply to collegiate or professional sports.&nbsp;</p>
-<p>As of January 25, 2021, competitions for some sports may resume.</p>
-<ul><li>Competitions must be between only two teams.</li><li>Out-of-state tournaments are not permitted.</li></ul>
-<p>Find all the details in the latest <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guidance for youth and adult recreational sports</a>, including limitations for competitions. </p>
-<p>The California Department of Public Health has also released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">questions and answers about youth and adult sports</a>.</p>
+<p>Find more information in the California Department of Public Health’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">questions and answers about youth sports</a>.</p>
+<p><strong>Competitions</strong></p>
+<p>Competitions for some sports can resume. They must be between only two teams. A team can participate in only one game per day. Out-of-state tournaments are not permitted. Competitions can occur when both teams are located:</p>
+<ul><li>In the same county and the sport is permitted in that county’s current tier</li><li>In bordering counties and the sport is permitted in both counties’ current tiers</li></ul>
+<p>Multi-team competition is permitted for sports where individual competitors from multiple teams is routine, such as:</p>
+<ul><li>Track and field</li><li>Cross-country</li><li>Golf</li><li>Ski and snowboarding</li><li>Tennis</li><li>Swimming, diving, and surfing</li><li>Biking</li><li>Equestrian events</li></ul>
+<p>The local health department where the event is being held and each of the local health departments that teams are traveling from must authorize the competition.</p>
+<p>Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guidance for youth and adult recreational sports</a> for complete details.</p>
+<p><strong>Teams following college sports requirements</strong></p>
+<p>If a team follows the stricter requirements in place for college teams, they can return to competition at any time for any sport, including indoors. These requirements include:</p>
+<ul><li>Rigorous testing requirements for each competition</li><li>Contact tracing protocols</li><li>Coordination with local health authorities</li></ul>
+<p>Find complete details about these requirements in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guidance for youth and adult recreational sports</a>.</p>
 
                   </div>
                 </div>
@@ -2428,7 +2436,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
