Update page - travel.html fb0196cf025a92482bfbf0d8b47776e3b14d67c4

--- a/holidays/index.html
+++ b/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Holidays and COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;March 1, 2021 at 5:40 PM</p>
+            <p class="small-text">Last updated&nbsp;March 23, 2021 at 6:22 PM</p>
           
         </div>
       </div>
@@ -165,11 +165,11 @@
 
 
 
-<p>On this page:</p>
+<p class="h3">On this page:</p>
 
 
 
-<ul><li><strong><a href="#the-covid-chat">Having &#8220;The COVID chat&#8221;</a></strong></li><li><strong><a href="#restrictions">Check restrictions in your area</a></strong></li><li><strong><a title="See the Travel advisory section" href="#travel-advisory">Travel advisory</a></strong></li><li><strong><a href="#holiday-tips">Tips for healthier holidays</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#the-covid-chat">Having &#8220;The COVID chat&#8221;</a></strong></li><li><strong><a href="#restrictions">Check restrictions in your area</a></strong></li><li><strong><a title="See the Travel advisory section" href="#travel-advisory">Travel advisory</a></strong></li><li><strong><a href="#holiday-tips">Tips for healthier holidays</a></strong></li></ul>
 
 
 
