--- a/housing-for-agricultural-workers/index.html
+++ b/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Housing for agricultural workers</h1>
           
-            <p class="small-text">Last updated&nbsp;March 11, 2021 at 5:26 PM</p>
+            <p class="small-text">Last updated&nbsp;March 23, 2021 at 6:22 PM</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>On this page you will find:</p>
+<p class="h3">On this page:</p>
 
 
 
@@ -185,7 +185,7 @@
 
 
 
-<ul><li>Serve as primary point of contact with workers who need isolation housing </li><li>Verify participant eligibility</li><li>Coordinate with the State to book rooms if that is preferred</li><li>Provide services including transportation, meals and wellness checks</li><li>Ensure services are provided in the participant&#8217;s language, and</li><li>Collect data required for FEMA reimbursement</li><li>Provide financial assistance for those quarantining</li></ul>
+<ul><li>Serve as primary point of contact with workers who need isolation housing&nbsp;</li><li>Verify participant eligibility</li><li>Coordinate with the State to book rooms if that is preferred</li><li>Provide services including transportation, meals and wellness checks</li><li>Ensure services are provided in the participant&#8217;s language, and</li><li>Collect data required for FEMA reimbursement</li><li>Provide financial assistance for those quarantining</li></ul>
 
 
 
@@ -201,7 +201,7 @@
 
 
 
-<ul><li>Work in California food processing or agriculture  </li><li>Meet <a href="https://www.cdss.ca.gov/Portals/9/FEMA/202005-DR-4482-CA-Non-Congregate-Sheltering-Request-Response-Letter-03272020.pdf">FEMA non-congregate sheltering criteria (PDF)</a> for COVID-19: <ul><li>Have tested positive, or </li><li>Been exposed as documented by a public health official or medical health professional</li></ul></li><li>Be unable to self-isolate at home, if requesting a hotel room </li></ul>
+<ul><li>Work in California food processing or agriculture&nbsp;&nbsp;</li><li>Meet <a href="https://www.cdss.ca.gov/Portals/9/FEMA/202005-DR-4482-CA-Non-Congregate-Sheltering-Request-Response-Letter-03272020.pdf">FEMA non-congregate sheltering criteria (PDF)</a> for COVID-19:&nbsp;<ul><li>Have tested positive, or&nbsp;</li><li>Been exposed as documented by a public health official or medical health professional</li></ul></li><li>Be unable to self-isolate at home, if requesting a hotel room&nbsp;</li></ul>
 
 
 
@@ -225,7 +225,7 @@
 
 
 
-<p>The program is offered in the 14 counties listed above.   </p>
+<p>The program is offered in the 14 counties listed above.  &nbsp;</p>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p>State funding will cover eligible costs for transportation, meals, wellness checks and any other services for in-home and in-hotel quarantining through an agreement with the county. Philanthropy may cover additional costs. Some costs may be eligible for FEMA reimbursement by the county.  </p>
+<p>State funding will cover eligible costs for transportation, meals, wellness checks and any other services for in-home and in-hotel quarantining through an agreement with the county. Philanthropy may cover additional costs. Some costs may be eligible for FEMA reimbursement by the county.&nbsp;&nbsp;</p>
 </div>
     </div>
   </div>
