--- a/travel/index.html
+++ b/travel/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Travel</h1>
           
-            <p class="small-text">Last updated&nbsp;February 2, 2021 at 11:58 AM</p>
+            <p class="small-text">Last updated&nbsp;March 23, 2021 at 6:24 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>On this page you will find:</p>
+<p class="h3">On this page:</p>
 
 
 
-<ul><li><strong><a href="#why-travel-is-risky">Why travel is risky</a></strong></li><li><strong><a href="#whats-considered-essential-travel">What’s considered essential travel</a></strong></li><li><strong><a href="#current-travel-recommendations">Current travel recommendations</a></strong></li><li><strong><a href="#questions-and-answers">Questions and answers</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#why-travel-is-risky">Why travel is risky</a></strong></li><li><strong><a href="#whats-considered-essential-travel">What’s considered essential travel</a></strong></li><li><strong><a href="#current-travel-recommendations">Current travel recommendations</a></strong></li><li><strong><a href="#questions-and-answers">Questions and answers</a></strong></li></ul>
 
 
 
@@ -224,7 +224,7 @@
                   <div class="card-body">
             <p>On January 6, 2021, the California Department of Public Health issued a revised <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a> that supersedes the previous Travel Advisory issued on November 13, 2020. This advisory affects all counties in California.&nbsp;</p>
 <p>To prevent further spread of COVID-19 and help contain any new sources of infection, Californians should stay within 120 miles from their home or other place of residence, unless they are traveling for essential purposes. Essential travel includes: work and study, critical infrastructure support, economic services and supply chains, health, immediate medical care, and safety and security.</p>
-<p>Traveling into California from other states or countries for tourism or recreation is also strongly discouraged, and anyone traveling into California should self-quarantine for 10 days, unless quarantining is impracticable and the travel is for the sole purpose of meeting critical healthcare needs or other emergency response.   </p>
+<p>Traveling into California from other states or countries for tourism or recreation is also strongly discouraged, and anyone traveling into California should self-quarantine for 10 days, unless quarantining is impracticable and the travel is for the sole purpose of meeting critical healthcare needs or other emergency response.&nbsp;&nbsp;&nbsp;</p>
 <p>See the California Department of Public Health’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a> for more info.</p>
 
                   </div>
