--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">إن سكان كاليفورنيا المعرضين لخطر الإصابة بكوفيد-19 مؤهلون الآن للتطعيم</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">وصلت لقاحات كوفيد-19 في كاليفورنيا إلى 15 مليونًا</h2>
 
 
 
-<p>إذا كانت لديك حالة طبية أو إعاقة تزيد من خطر إصابتك بكوفيد-19، أو تعيش أو تعمل في أماكن عالية الخطورة، فيمكنك الحصول على اللقاح الآن. تعرف على كيفية معرفة ما إذا كنت مؤهلاً وكيف تحدد موعدًا.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">احصل على التفاصيل</a> 
+<p>وبلغ مجموع عدد لقاحات كوفيد-19 التي أعطيت في كاليفورنيا 15 مليون تلقيح. شاهد إحصائيات التطعيم على مستوى الولاية ومصنفة حسب المقاطعة في لوحة معلومات اللقاح الخاصة بنا.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">شاهد الأرقام</a> 
