--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Los californianos con mayor riesgo de contraer COVID-19 ya son elegibles para la vacunación</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Las vacunas contra la COVID-19 en California alcanzan los 15 millones</h2>
 
 
 
-<p>Si usted tiene una afección médica o discapacidad que hace que aumente su riesgo de enfermarse de COVID-19, o vive o trabaja en entornos de alto riesgo, ya puede vacunarse. Descubra si es elegible y haga una cita.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Obtenga los detalles.</a> 
+<p>El número total de vacunas contra la COVID-19 administradas en California alcanzó los 15 millones. Consulte las estadísticas de vacunación en todo el estado y desglosadas por condado en nuestro panel de control de vacunas.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">Consulte las cifras</a> 
