--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">이제 COVID-19 고위험군에 해당하는 캘리포니아 주민은 백신 접종 자격자에 해당합니다</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">캘리포니아 내 COVID-19 백신 접종자가 1천5백만명에 도달하였습니다</h2>
 
 
 
-<p>COVID-19 발병 위험을 더 크게 할 질환이나 장애가 있는 경우 또는 고위험 환경에서 거주하거나 근무하는 경우지금 백신을 접종받을 수 있습니다. 자격 해당 여부 확인 및 예약 방법에 대해 알아 보십시오.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">세부 사항을 확인하십시오</a> 
+<p>캘피포니아에서 COVID-19 백신을 투여한 접종자가 총 1천5백만명에 도달하였습니다. 백신 관련 대시보드에서 주 전역 및 카운티 별로 분류한 통계 내용을 참조하십시오.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">해당 숫자 확인</a> 
