--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Kwalipikado na ngayong magpabakuna ang mga Californian na may mas malaking posibilidad na magkaroon ng COVID-19</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Mga pagpapabakuna laban sa COVID-19 sa California, umabot na sa 15 milyon</h2>
 
 
 
-<p>Kung mayroon kang medikal na kundisyon o kapansanang nagpapalaki sa posibilidad mong mahawahan ng COVID-19, o kung nakatira o nagtatrabaho ka sa mga lugar na may malaking panganib, puwede ka nang magpabakuna ngayon. Alamin kung paano malalaman kung kwalipikado ka at kung paano magpa-appointment.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Kunin ang mga detalye</a> 
+<p>Umabot na sa 15 milyon ang kabuuang bilang ng mga pagpapabakuna laban sa COVID-19 sa California. Tingnan ang mga istatistika sa pagbabakuna sa buong estado, na naka-break down ayon sa county sa aming Vaccine Dashboard.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">Tingnan ang mga numero</a> 
