--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Những người dân California có nguy cơ cao hơn do bệnh COVID-19 hội đủ điều kiện để được tiêm vắc-xin vào thời điểm này</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Số lượng vắc-xin COVID-19 được tiêm tại California đạt 15 triệu liều</h2>
 
 
 
-<p>Nếu có bệnh trạng hoặc khuyết tật làm tăng nguy cơ mắc bệnh COVID-19 hoặc sống hoặc làm việc ở những môi trường có nguy cơ cao, quý vị có thể được tiêm vắc-xin vào thời điểm này. Hãy tìm hiểu cách xem quý vị có đủ điều kiện hay không và đặt lịch hẹn.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Nhận thông tin chi tiết</a> 
+<p>Tổng số lượng vắc-xin COVID-19 được tiêm tại California đã đạt tới 15 triệu liều. Xem số liệu thống kê chủng ngừa trên toàn tiểu bang và số liệu được chia nhỏ theo quận trong Bảng Dữ Liệu về Vắc-xin của chúng tôi.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">Xem số liệu</a> 
