--- a/pages/translated-posts/new-zh-hans.html
+++ b/pages/translated-posts/new-zh-hans.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">患COVID-19风险更高的加州民众现在有资格接种疫苗</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">加州COVID-19疫苗接种人数已达1500万人</h2>
 
 
 
-<p>如果您有会导致您患COVID-19风险更高的健康状况或残疾状况，或在高风险场所居住或工作，则您现在就可以接种疫苗。了解如何查看您是否符合资格并且预约疫苗接种</p><a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">获取详情</a> 
+<p>加州COVID-19疫苗接种总人数已达1500万人。请参阅疫苗一览表中全州的疫苗接种统计数据（按县分类）。</p><a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">请参阅相关数据</a> 
