--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月23日, 下午6:26</p>
+            <p class="small-text">最近更新&nbsp;2021年3月24日, 上午7:22</p>
           
         </div>
       </div>
