--- a/taxes/index.html
+++ b/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Taxes</h1>
           
-            <p class="small-text">Last updated&nbsp;March 23, 2021 at 11:33 AM</p>
+            <p class="small-text">Last updated&nbsp;March 24, 2021 at 9:49 AM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>On this page:</p>
+<p class="h3">On this page:</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">Extended filing deadline</a></strong></li><li><strong><a href="#individual-taxes">Help for individuals</a></strong></li><li><strong><a href="#business-taxes">Small business tax relief</a></strong></li><li><strong><a href="#questions-taxes">Questions and answers</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">Extended filing deadline</a></strong></li><li><strong><a href="#individual-taxes">Help for individuals</a></strong></li><li><strong><a href="#business-taxes">Small business tax relief</a></strong></li><li><strong><a href="#questions-taxes">Questions and answers</a></strong></li></ul>
 
 
 
