Update page - people-want-to-know.json 0a0737d4d130e7d1977be98699d23f6dc6cdcb4d

--- a/ar/index.html
+++ b/ar/index.html
@@ -414,7 +414,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="symptoms-and-risks/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#your-stress">
 								<div class="link-arrow-label">ما هي الأعراض والمخاطر؟</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -442,7 +442,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="masks-and-ppe/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#parents-kids">
 								<div class="link-arrow-label">من الذي يجب عليه ارتداء كمامة؟</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
