--- a/es/index.html
+++ b/es/index.html
@@ -414,7 +414,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="symptoms-and-risks/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#your-stress">
 								<div class="link-arrow-label">¿Cuáles son los síntomas y los riesgos?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -442,7 +442,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="masks-and-ppe/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#parents-kids">
 								<div class="link-arrow-label">¿Quién debe usar mascarilla?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
