--- a/index.html
+++ b/index.html
@@ -419,6 +419,12 @@
 								<cagov-arrow></cagov-arrow>
 							</a>
 						</li>
+						<li>    
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#your-stress">
+								<div class="link-arrow-label">What do I do about stress?</div>
+								<cagov-arrow></cagov-arrow>
+							</a>
+						</li>
 						</ul>
 					</div>
 					<div class="faq trigger">
@@ -438,6 +444,12 @@
 						<li>    
 							<a class="link-arrow-white js-event-hm-wtk" href="https://schools.covid19.ca.gov/">
 								<div class="link-arrow-label">What’s the plan to keep schools safe?</div>
+								<cagov-arrow></cagov-arrow>
+							</a>
+						</li>
+						<li>    
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#parents-kids">
+								<div class="link-arrow-label">How do I talk to my kids about COVID-19?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
 						</li>
