--- a/ko/index.html
+++ b/ko/index.html
@@ -414,7 +414,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="symptoms-and-risks/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#your-stress">
 								<div class="link-arrow-label">해당 증상 및 위험?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -442,7 +442,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="masks-and-ppe/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#parents-kids">
 								<div class="link-arrow-label">필수 마스크 착용자?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
