--- a/vi/index.html
+++ b/vi/index.html
@@ -416,7 +416,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="symptoms-and-risks/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#your-stress">
 								<div class="link-arrow-label">Có những triệu chứng và nguy cơ gì?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -444,7 +444,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white js-event-hm-wtk" href="masks-and-ppe/">
+							<a class="link-arrow-white js-event-hm-wtk" href="manage-stress-for-health/#parents-kids">
 								<div class="link-arrow-label">Tại sao nên đeo khẩu trang?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
