--- a/childcare/index.html
+++ b/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Find childcare options near you</h1>
           
-            <p class="small-text">Last updated&nbsp;March 23, 2021 at 12:10 PM</p>
+            <p class="small-text">Last updated&nbsp;March 24, 2021 at 2:04 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>On this page:</p>
+<p class="h3">On this page:</p>
 
 
 
-<ul><li><strong><a href="#find">Find childcare</a></strong></li><li><strong><a href="#add-to-list">Add a licensed childcare service to the provider list</a></strong></li><li><strong><a href="#resources">More resources</a></strong></li><li><strong><a href="#questions">Questions and answers</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">Find childcare</a></strong></li><li><strong><a href="#add-to-list">Add a licensed childcare service to the provider list</a></strong></li><li><strong><a href="#resources">More resources</a></strong></li><li><strong><a href="#questions">Questions and answers</a></strong></li></ul>
 
 
 
