--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 3, 2021 lúc 14:09</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 3, 2021 lúc 14:12</p>
           
         </div>
       </div>
@@ -165,6 +165,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47771 -->March 24, 2021</small></p>
           <div class="card-text" lang="en-US">Launched by California First Partner Jennifer Siebel Newsom and the California Commission on the Status of Women and Girls, the Pledge Boasts Over 60 Signatories Sacramento, CA – California First Partner Jennifer Siebel ...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-099.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#361)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--56f0cca69089886c9b66181bcb44827a -->March 23, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
