--- a/guide-immigrant-californians/index.html
+++ b/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for immigrants</h1>
           
-            <p class="small-text">Last updated&nbsp;March 23, 2021 at 11:44 AM</p>
+            <p class="small-text">Last updated&nbsp;March 24, 2021 at 2:15 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>On this page you will find:</p>
+<p class="h3">On this page:</p>
 
 
 
-<ul><li><strong><a href="#testing-treatment">Testing and treatment</a></strong></li><li><strong><a href="#know-your-rights">Know your rights</a></strong></li><li><strong><a href="#housing-help">Housing help</a></strong></li><li><strong><a href="#guide">Guide for Immigrant Californians</a></strong></li><li><strong><a href="#tax-credits">Tax credits</a></strong></li><li><strong><a href="#questions">Questions and answers</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#testing-treatment">Testing and treatment</a></strong></li><li><strong><a href="#know-your-rights">Know your rights</a></strong></li><li><strong><a href="#housing-help">Housing help</a></strong></li><li><strong><a href="#guide">Guide for Immigrant Californians</a></strong></li><li><strong><a href="#tax-credits">Tax credits</a></strong></li><li><strong><a href="#questions">Questions and answers</a></strong></li></ul>
 
 
 
