Update translation - 105059841 (#3864) 7a4e2b8782f54a4929c5bd9bb83f8c1b99af6bde

--- a/tl/childcare/index.html
+++ b/tl/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Maghanap ng mga opsyon sa childcare na malapit sa iyo</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 23, 2021 sa 12:10 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 24, 2021 sa 2:04 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>Sa page na ito:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
-<ul><li><strong><a href="#find">Maghanap ng childcare</a></strong></li><li><strong><a href="#add-to-list">Magdagdag sa listahan ng provider ng lisensyadong serbisyo sa childcare</a></strong></li><li><strong><a href="#resources">Higit pang resource</a></strong></li><li><strong><a href="#questions">Mga tanong at sagot</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">Maghanap ng childcare</a></strong></li><li><strong><a href="#add-to-list">Magdagdag sa listahan ng provider ng lisensyadong serbisyo sa childcare</a></strong></li><li><strong><a href="#resources">Higit pang resource</a></strong></li><li><strong><a href="#questions">Mga tanong at sagot</a></strong></li></ul>
 
 
 
