--- a/vi/childcare/index.html
+++ b/vi/childcare/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tìm các dịch vụ chăm sóc trẻ em gần nơi quý vị sinh sống</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;23 tháng 3, 2021 lúc 24:10</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 3, 2021 lúc 14:04</p>
           
         </div>
       </div>
@@ -163,11 +163,11 @@
 
 
 
-<p>Trên trang này:</p>
+<p class="h3">Trên trang này:</p>
 
 
 
-<ul><li><strong><a href="#find">Tìm dịch vụ chăm sóc trẻ em</a></strong></li><li><strong><a href="#add-to-list">Bổ sung dịch vụ chăm sóc trẻ em được cấp phép vào danh sách nhà cung cấp</a></strong></li><li><strong><a href="#resources">Thêm nguồn lực</a></strong></li><li><strong><a href="#questions">Hỏi và đáp</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">Tìm dịch vụ chăm sóc trẻ em</a></strong></li><li><strong><a href="#add-to-list">Bổ sung dịch vụ chăm sóc trẻ em được cấp phép vào danh sách nhà cung cấp</a></strong></li><li><strong><a href="#resources">Thêm nguồn lực</a></strong></li><li><strong><a href="#questions">Hỏi và đáp</a></strong></li></ul>
 
 
 
