--- a/ar/childcare/index.html
+++ b/ar/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اعثر على خيارات رعاية الأطفال القريبة منك</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:10 م الساعة 23 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;2:04 م الساعة 24 مارس 2021</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>في هذه الصفحة:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
-<ul><li><strong><a href="#find">العثور على خدمات رعاية الأطفال</a></strong></li><li><strong><a href="#add-to-list">قم بإضافة خدمة رعاية أطفال مرخصة إلى قائمة مقدمي الخدمات</a></strong></li><li><strong><a href="#resources">المزيد من الموارد</a></strong></li><li><strong><a href="#questions">أسئلة وإجابات</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">العثور على خدمات رعاية الأطفال</a></strong></li><li><strong><a href="#add-to-list">قم بإضافة خدمة رعاية أطفال مرخصة إلى قائمة مقدمي الخدمات</a></strong></li><li><strong><a href="#resources">المزيد من الموارد</a></strong></li><li><strong><a href="#questions">أسئلة وإجابات</a></strong></li></ul>
 
 
 
