--- a/es/childcare/index.html
+++ b/es/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Encuentre opciones de cuidado infantil cerca de usted</h1>
           
-            <p class="small-text">Última actualización&nbsp;23 de marzo de 2021 a las 12:10 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de marzo de 2021 a las 2:04 p. m.</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
-<ul><li><strong><a href="#find">Encontrar cuidado infantil</a></strong></li><li><strong><a href="#add-to-list">Agregar un servicio de cuidado infantil con licencia a la lista de proveedores</a></strong></li><li><strong><a href="#resources">Más recursos</a></strong></li><li><strong><a href="#questions">Preguntas y respuestas</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">Encontrar cuidado infantil</a></strong></li><li><strong><a href="#add-to-list">Agregar un servicio de cuidado infantil con licencia a la lista de proveedores</a></strong></li><li><strong><a href="#resources">Más recursos</a></strong></li><li><strong><a href="#questions">Preguntas y respuestas</a></strong></li></ul>
 
 
 
