--- a/ko/childcare/index.html
+++ b/ko/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>근처의 선택 가능한 보육 시설 확인</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 23일 오후 12:10</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 24일 오후 2:04</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>본 페이지의 내용:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
-<ul><li><strong><a href="#find">보육 시설 찾기</a></strong></li><li><strong><a href="#add-to-list">인가 보육 서비스를 제공자 목록에 추가하기</a></strong></li><li><strong><a href="#resources">추가 자원</a></strong></li><li><strong><a href="#questions">질문 및 답변</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">보육 시설 찾기</a></strong></li><li><strong><a href="#add-to-list">인가 보육 서비스를 제공자 목록에 추가하기</a></strong></li><li><strong><a href="#resources">추가 자원</a></strong></li><li><strong><a href="#questions">질문 및 답변</a></strong></li></ul>
 
 
 
