--- a/zh-hans/childcare/index.html
+++ b/zh-hans/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>查找附近的托儿服务选项</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月23日, 下午12:10</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月24日, 下午2:04</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此页面包含的内容：</p>
+<p class="h3">此页面包含的内容：</p>
 
 
 
-<ul><li><strong><a href="#find">查找托儿服务</a></strong></li><li><strong><a href="#add-to-list">添加持照托儿服务至提供者清单</a></strong></li><li><strong><a href="#resources">更多资源</a></strong></li><li><strong><a href="#questions">问题与解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">查找托儿服务</a></strong></li><li><strong><a href="#add-to-list">添加持照托儿服务至提供者清单</a></strong></li><li><strong><a href="#resources">更多资源</a></strong></li><li><strong><a href="#questions">问题与解答</a></strong></li></ul>
 
 
 
