--- a/zh-hant/childcare/index.html
+++ b/zh-hant/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>查找附近的托兒服務選擇</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月23日, 下午12:10</p>
+            <p class="small-text">最近更新&nbsp;2021年3月24日, 下午2:04</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此頁面包含的內容：</p>
+<p class="h3">此頁面包含的內容：</p>
 
 
 
-<ul><li><strong><a href="#find">尋找托兒服務</a></strong></li><li><strong><a href="#add-to-list">添加持照托兒服務至提供者清單</a></strong></li><li><strong><a href="#resources">更多資源</a></strong></li><li><strong><a href="#questions">問題與解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#find">尋找托兒服務</a></strong></li><li><strong><a href="#add-to-list">添加持照托兒服務至提供者清單</a></strong></li><li><strong><a href="#resources">更多資源</a></strong></li><li><strong><a href="#questions">問題與解答</a></strong></li></ul>
 
 
 
