Update translation - 105051003 (#3862) fb79e896d83612df599c33333e40638eb081c4a8

--- a/tl/taxes/index.html
+++ b/tl/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Buwis</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 23, 2021 sa 11:33 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 24, 2021 sa 9:49 AM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>Sa page na ito:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">Pinalawig na deadline ng filing</a></strong></li><li><strong><a href="#individual-taxes">Tulong para sa mga indibidwal</a></strong></li><li><strong><a href="#business-taxes">Tulong sa Utang sa Maliliit na Negosyo</a></strong></li><li><strong><a href="#questions-taxes">Mga tanong at sagot</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">Pinalawig na deadline ng filing</a></strong></li><li><strong><a href="#individual-taxes">Tulong para sa mga indibidwal</a></strong></li><li><strong><a href="#business-taxes">Tulong sa Utang sa Maliliit na Negosyo</a></strong></li><li><strong><a href="#questions-taxes">Mga tanong at sagot</a></strong></li></ul>
 
 
 
