--- a/vi/taxes/index.html
+++ b/vi/taxes/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Thuế</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;23 tháng 3, 2021 lúc 11:33</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 3, 2021 lúc 9:49</p>
           
         </div>
       </div>
@@ -163,11 +163,11 @@
 
 
 
-<p>Trên trang này:</p>
+<p class="h3">Trên trang này:</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">Gia hạn thời hạn nộp đơn</a></strong></li><li><strong><a href="#individual-taxes">Hỗ trợ các cá nhân</a></strong></li><li><strong><a href="#business-taxes">Hỗ trợ thuế cho doanh nghiệp nhỏ</a></strong></li><li><strong><a href="#questions-taxes">Hỏi và đáp</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">Gia hạn thời hạn nộp đơn</a></strong></li><li><strong><a href="#individual-taxes">Hỗ trợ các cá nhân</a></strong></li><li><strong><a href="#business-taxes">Hỗ trợ thuế cho doanh nghiệp nhỏ</a></strong></li><li><strong><a href="#questions-taxes">Hỏi và đáp</a></strong></li></ul>
 
 
 
