--- a/ar/taxes/index.html
+++ b/ar/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الضرائب</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:33 ص الساعة 23 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:49 ص الساعة 24 مارس 2021</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>في هذه الصفحة:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">تمديد الموعد النهائي للتقديم</a></strong></li><li><strong><a href="#individual-taxes">مساعدة الأفراد</a></strong></li><li><strong><a href="#business-taxes">الإعفاء الضريبي للأعمال التجارية الصغيرة</a></strong></li><li><strong><a href="#questions-taxes">أسئلة وإجابات</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">تمديد الموعد النهائي للتقديم</a></strong></li><li><strong><a href="#individual-taxes">مساعدة الأفراد</a></strong></li><li><strong><a href="#business-taxes">الإعفاء الضريبي للأعمال التجارية الصغيرة</a></strong></li><li><strong><a href="#questions-taxes">أسئلة وإجابات</a></strong></li></ul>
 
 
 
