--- a/es/taxes/index.html
+++ b/es/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Impuestos</h1>
           
-            <p class="small-text">Última actualización&nbsp;23 de marzo de 2021 a las 11:33 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de marzo de 2021 a las 9:49 a. m.</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">Plazo de presentación ampliado</a></strong></li><li><strong><a href="#individual-taxes">Ayuda para personas</a></strong></li><li><strong><a href="#business-taxes">Apoyos fiscales para pequeñas empresas</a></strong></li><li><strong><a href="#questions-taxes">Preguntas y respuestas</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">Plazo de presentación ampliado</a></strong></li><li><strong><a href="#individual-taxes">Ayuda para personas</a></strong></li><li><strong><a href="#business-taxes">Apoyos fiscales para pequeñas empresas</a></strong></li><li><strong><a href="#questions-taxes">Preguntas y respuestas</a></strong></li></ul>
 
 
 
