--- a/ko/taxes/index.html
+++ b/ko/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>세금</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 23일 오전 11:33</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 24일 오전 9:49</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>본 페이지의 내용:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">신고 기한 연장</a></strong></li><li><strong><a href="#individual-taxes">개인 납세자를 위한 지원</a></strong></li><li><strong><a href="#business-taxes">영세 사업체 세금 경감</a></strong></li><li><strong><a href="#questions-taxes">질문 및 답변</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">신고 기한 연장</a></strong></li><li><strong><a href="#individual-taxes">개인 납세자를 위한 지원</a></strong></li><li><strong><a href="#business-taxes">영세 사업체 세금 경감</a></strong></li><li><strong><a href="#questions-taxes">질문 및 답변</a></strong></li></ul>
 
 
 
