--- a/zh-hans/taxes/index.html
+++ b/zh-hans/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>税收</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月23日, 上午11:33</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月24日, 上午9:49</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此页面包含的内容：</p>
+<p class="h3">此页面包含的内容：</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">申报期限已延长</a></strong></li><li><strong><a href="#individual-taxes">为个人提供的帮助</a></strong></li><li><strong><a href="#business-taxes">小商业税收减免</a></strong></li><li><strong><a href="#questions-taxes">问题与解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">申报期限已延长</a></strong></li><li><strong><a href="#individual-taxes">为个人提供的帮助</a></strong></li><li><strong><a href="#business-taxes">小商业税收减免</a></strong></li><li><strong><a href="#questions-taxes">问题与解答</a></strong></li></ul>
 
 
 
