--- a/zh-hant/taxes/index.html
+++ b/zh-hant/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>稅收</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月23日, 上午11:33</p>
+            <p class="small-text">最近更新&nbsp;2021年3月24日, 上午9:49</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此頁面包含的內容：</p>
+<p class="h3">此頁面包含的內容：</p>
 
 
 
-<ul><li><strong><a href="#extended-deadline">申報期限已延長</a></strong></li><li><strong><a href="#individual-taxes">為個人提供的幫助</a></strong></li><li><strong><a href="#business-taxes">小商業稅收減免</a></strong></li><li><strong><a href="#questions-taxes">問題與解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#extended-deadline">申報期限已延長</a></strong></li><li><strong><a href="#individual-taxes">為個人提供的幫助</a></strong></li><li><strong><a href="#business-taxes">小商業稅收減免</a></strong></li><li><strong><a href="#questions-taxes">問題與解答</a></strong></li></ul>
 
 
 
